--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,18 @@ cursor: pointer;
 right: -30px;
 top: 35px;
 }
+.findlost {
+    line-height:12px;
+    margin-top: -5px;
+    margin-left: -12px;
+    height:25px;
+    
+    
+}
+.button {
+font-size: 12px;
+color:grey;
+text-decoration:none;
+font-style:italic;
+margin-right: -8px;
+}
