--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -21,7 +21,6 @@
 {
     font-size: 0;
     line-height: 0;
-
     position: absolute;
     top: 50%;
 
@@ -29,15 +28,15 @@
 
     width: 20px;
     height: 20px;
-    margin-top: -10px;
+    margin-top: -40px;
     padding: 0;
 
     cursor: pointer;
 
-    color: transparent;
+    color:lightblue;
     border: none;
     outline: none;
-    background: transparent;
+    background:transparent;
 }
 .slick-prev:hover,
 .slick-prev:focus,
@@ -69,7 +68,7 @@
     line-height: 1;
 
     opacity: .75;
-    color: white;
+    color:#1975FF;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
