--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -33,7 +33,7 @@
 
     cursor: pointer;
 
-    color:lightblue;
+    color:green;
     border: none;
     outline: none;
     background:transparent;
