--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 	min-height:100%;
 }
 .imgSlide {
-	width:auto;
+	width:165px;
 	height:120px;
 }
 .slide-holder{
@@ -67,3 +67,5 @@ text-decoration:none;
 font-style:italic;
 margin-right: -8px;
 }
+.button:hover {text-decoration: none;
+color:lightblue;}
