--- a/css/menu.css
+++ b/css/menu.css
@@ -47,8 +47,9 @@
 	color: white!important;
 }
 
-@media (max-width:768px){
-	.navbar-default .navbar-nav .open .dropdown-menu> li > a:hover,
+.media {max-width:768px;}
+	
+.navbar-default .navbar-nav .open .dropdown-menu> li > a:hover,
 	.dropdown-menu > li > a:hover {
 		color: white!important;
 	}
