--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,9 @@ top: 35px;
 }
 .findlost {
     line-height:12px;
-    margin-left: -15px;
-    height:29px;
+    margin-top: -5px;
+    margin-left: -12px;
+    height:25px;
     
     
 }
