--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,8 @@ margin-right: -8px;
 }
 .button:hover {text-decoration: none;
 color:lightblue;}
+#anhtrong {margin-left:90px;
+height:450px;
+width: 600px;
+
+}
